# kineticplasma-HPC

./: .gitignore  README.md
c/: README.md
cpp/: README.md
cpp-eigen/: README.md  espic.hpp
cpp-eigen/pythoncode/: energy_historyN2v0.csv  energy_historyN2v1.csv  energy_historyN64.csv  energy_historyN64_dt10x.csv  energy_historyN64_dt20x.csv  energy_historyN64_dt50x.csv  energy_historytest.csv  grid_dataN2v0.csv  grid_dataN2v1.csv  grid_dataN64.csv  grid_dataN64_dt10x.csv  grid_dataN64_dt20x.csv  grid_dataN64_dt50x.csv  grid_datatest.csv  helper.py  parse_and_plot.py  particle_phasespacetest.csv  particles_phasespaceN2v0.csv  particles_phasespaceN2v1.csv  particles_phasespaceN64.csv  particles_phasespaceN64_dt10x.csv  particles_phasespaceN64_dt20x.csv  particles_phasespaceN64_dt50x.csv  particles_phasespacetest.csv
cpp-eigen/test/: bst.csv  fieldsolvetest_grid.csv  fieldsolvetest_grid_ansoln.csv  fieldsolvetest_particles.csv  test-N2_boundary.cpp  test-fieldsolve.cpp  test-fieldsolve_N64.cpp  test-fieldsolve_ansoln.cpp  test-fs_ansoln  test-loop.cpp  test-misc.cpp  test.hpp  unittests.cpp
cpp-petsc/debug/: debug-main.cpp
cpp-petsc/debug/debug-include/: Grid-debug.hpp  Particles-debug.hpp  espic1d1v-debug.hpp
cpp-petsc/include/: Grid.hpp  Particles.hpp
cpp/cpp-eigen/: README.md
cpp/cpp-petsc/: README.md
cpp/debug/: debug-main.cpp  debug.inp
cpp/espic_1d1v/: README.md  espic.hpp  espic1d1v_InitialStep.gv  main.cpp
cpp/espic_1d1v/benchmarking/src/: CMakeLists.txt  bench-main.cpp
cpp/espic_1d1v/debug/src/: CMakeLists.txt  debug-main.cpp
cpp/include/: espic1d1v.hpp
cpp/src/: espic1d1v.inp
cpp/twostream/: README.md
fortran/: README.md
julia/: README.md
python/: README.md
rust/: README.md
(+1283 files in other folders)
